--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="This is an HTML5 example">
   <meta name="keywords" content="HTML5, CSS3, JavaScript">
-  <title>This text is the title of the document</title>
+  <title>This text x is the title of the document</title>
   <link rel="stylesheet" href="mystyles.css">
 </head>
 <body>
